<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".AddActivity">

  <TextView
      android:id="@+id/titulo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/roboto"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:text="@string/titulo_nueva_alarma"
      android:textSize="36dp"
      android:textStyle="bold" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
    android:layout_below="@id/titulo">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/nombreedit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50dp"
          android:layout_marginTop="25dp"
          android:layout_marginRight="50dp"
          android:hint="@string/nombre_alarma"
          android:background="@color/item_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fechainput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/fechaedit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50dp"
          android:layout_marginTop="25dp"
          android:layout_marginRight="50dp"
          android:hint="@string/fecha_alarma"
          android:background="@color/item_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/horainput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/horaedit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="50dp"
          android:layout_marginTop="25dp"
          android:layout_marginRight="50dp"
          android:backgroundTint="#FFFFFF"
          android:drawableBottom="@color/item_background"
          android:hint="@string/hora_alarma"
          android:background="@color/item_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

      <Button
          android:id="@+id/cancelarBtn"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_marginLeft="50dp"
          android:layout_marginBottom="228dp"
          android:backgroundTint="@color/secondary"
          android:fontFamily="@font/roboto_bold"
          android:text="@string/btn_cancelar"
          android:textAllCaps="false"
          android:textColor="@color/black"
          android:textSize="24sp"
          app:cornerRadius="10dp" />

      <Button
          android:id="@+id/guardarBtn"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_marginLeft="10dp"
          android:layout_marginBottom="228dp"
          android:backgroundTint="@color/primary"
          android:fontFamily="@font/roboto_bold"
          android:text="@string/btn_guardar"
          android:textAllCaps="false"
          android:textColor="@color/black"
          android:textSize="24sp"
          app:cornerRadius="10dp" />
    </LinearLayout>


  </LinearLayout>

</RelativeLayout>