<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".ListActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="11dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <SearchView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/bg_white_rounded"
        android:submitBackground="@drawable/bg_white_rounded"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/alarm_1"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/item_background"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="142dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/alarm_title" />

            <TextView
                android:id="@+id/info_text2"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.739"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.18"
                tools:text="@string/alarm_date" />

            <TextView
                android:id="@+id/info_text3"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.739"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75"
                tools:text="@string/alarm_hour" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/trash" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/alarm_2"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/item_background"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_1"
        app:layout_constraintVertical_bias="0.02">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/info_text4"
                android:layout_width="142dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/alarm_title" />

            <TextView
                android:id="@+id/info_text5"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.739"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.18"
                tools:text="@string/alarm_date" />

            <TextView
                android:id="@+id/info_text6"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.739"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75"
                tools:text="@string/alarm_hour" />

            <ImageView
                android:id="@+id/imageView_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/trash" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/alarm_3"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/item_background"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_2"
        app:layout_constraintVertical_bias="0.02">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <TextView
                android:id="@+id/info_text7"
                android:layout_width="142dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/alarm_title" />

            <TextView
                android:id="@+id/info_text8"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.739"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.18"
                tools:text="@string/alarm_date" />

            <TextView
                android:id="@+id/info_text9"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/roboto_medium"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.739"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75"
                tools:text="@string/alarm_hour" />

            <ImageView
                android:id="@+id/imageView_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/trash" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>